--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ pytest
 pyyaml
 wandb
 git+https://github.com/Hiroshiba/pytorch-trainer@1.3.1
+git+https://github.com/Hiroshiba/acoustic_feature_extractor
